<resources>
    <string name="app_name">BusApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_user">User Register</string>


    <string name="user_name">Username</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>

    <string name="delete">Delete</string>


    <!--    Jadwal List String-->
    <string name="id_jadwal">ID JADWAL</string>
    <string name="bus_name">Nama Bus</string>
    <string name="bus_police_number">No Polisi </string>
    <string name="bus_seat_total">Sisa Kursi</string>
    <string name="bus_city_from">Cikarang</string>
    <string name="bus_city_to">DI Yogyakarta</string>
    <string name="bus_due_date">2002011</string>
    <string name="bus_due_time">08:00WIB</string>

    <string name="add_bus_name">Masukan nama Bus</string>
    <string name="add_bus_police">Masukan Nomer Polisi</string>
    <string name="add_bus_seat">Jumlah Kursi</string>
    <string name="add_bus_city_from">Kota Asal</string>
    <string name="add_bus_city_went">Kota Tujuan</string>

    <string-array name="spinner_seat">
        <item>Tipe Kursi</item>
        <item>2-2</item>
        <item>2-3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>