<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"

    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/lv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="244dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/hellow"
            android:layout_marginTop="50dp"/>
        <ProgressBar
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/user_name"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_button"
            android:text="@string/login"
            android:textColor="@color/black"/>

        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/btn_register"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_button"
            android:text="@string/register"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>