<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_home_photo"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent"/>

            <TextView
                android:id="@+id/mTv_from_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/img_home_photo"
                android:layout_toRightOf="@id/img_home_photo"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/bus_city_to"/>

            <TextView
                android:id="@+id/mTv_jadwal_bus_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_below="@id/mTv_from_to"
                android:layout_toEndOf="@id/img_home_photo"
                android:layout_toRightOf="@id/img_home_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/bus_due_date"/>

            <TextView
                android:id="@+id/mTv_jadwal_bus_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_below="@id/mTv_jadwal_bus_due_date"
                android:layout_toEndOf="@id/img_home_photo"
                android:layout_toRightOf="@id/img_home_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/bus_name"/>
            <TextView
                android:id="@+id/mTv_jadwal_bus_police"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_below="@id/mTv_jadwal_bus_name"
                android:layout_toEndOf="@id/img_home_photo"
                android:layout_toRightOf="@id/img_home_photo"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/bus_police_number"/>

        </RelativeLayout>



    </LinearLayout>


</androidx.cardview.widget.CardView>